<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal"
    android:orientation="vertical"
    android:background="@drawable/ic_fondo">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_margin="0dp"
        android:padding="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvActividad"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff080807" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/radioGroupAnadir"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvComplementaria"
                        android:id="@+id/rbComplementaria"
                        android:checked="true"
                        android:onClick="onRadioButtonClickedAnadir" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvExtraescolar"
                        android:id="@+id/rbExtraescolar"
                        android:checked="false"
                        android:onClick="onRadioButtonClickedAnadir" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/tvProfesor"
                    android:id="@+id/textView"
                    android:gravity="center_vertical"
                    android:textColor="#ff080807" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spProfesor" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/tvDepartamento"
                    android:id="@+id/textView2"
                    android:gravity="center_vertical"
                    android:textColor="#ff080807" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDepartamento"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/tvGrupo"
                    android:id="@+id/textView3"
                    android:gravity="center_vertical"
                    android:textColor="#ff080807" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spGrupo" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutComplementaria"
                    android:visibility="visible">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvFecha"
                            android:id="@+id/textView7"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/btCFecha"
                            android:layout_weight="1"
                            android:onClick="cFecha"
                            android:elegantTextHeight="false"
                            android:layout_marginBottom="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvLugar"
                            android:id="@+id/textView15"
                            android:textColor="#ff040404" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/etLugarC"
                            android:layout_weight="1"
                            android:layout_marginBottom="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvHora"
                            android:id="@+id/textView9"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btCHorai"
                            android:layout_weight="1"
                            android:onClick="cHoraI"
                            android:layout_marginBottom="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvHoraHasta"
                            android:id="@+id/textView14"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btCHoraf"
                            android:layout_weight="1"
                            android:onClick="cHoraF" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/layoutExtraescolar"
                    >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvFecha"
                            android:id="@+id/textView10"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/btEFechai"
                            android:visibility="visible"
                            android:onClick="eFechaI"
                            android:layout_marginBottom="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvHoraHasta"
                            android:id="@+id/textView11"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="124dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/btEFechaf"
                            android:onClick="eFechaF" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvLugarS"
                            android:id="@+id/textView8"
                            android:textColor="#ff040404" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/etELugarS"
                            android:layout_weight="1"
                            android:layout_marginBottom="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvLugarR"
                            android:id="@+id/textView12"
                            android:textColor="#ff040404" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/etELugarR"
                            android:layout_weight="1"
                            android:layout_marginBottom="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvHora"
                            android:id="@+id/textView20"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btEHorai"
                            android:layout_weight="1"
                            android:onClick="eHoraI"
                            android:layout_marginBottom="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvHoraHasta"
                            android:id="@+id/textView25"
                            android:textColor="#ff040404" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btEHoraf"
                            android:layout_weight="1"
                            android:onClick="eHoraF" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDescripcion"
                    android:id="@+id/textView4"
                    android:textColor="#ff080807" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView4" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etDescripcion"
                        android:layout_weight="1" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
